Fix background z-index issue

--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,6 @@ h1, h2 {
 @media only screen and (max-width: 800px) {
     body {
         font-size: 130%;
-        z-index: 0;
     }
 
     body:before {
@@ -248,6 +247,7 @@ h1, h2 {
         width: 100%;
         height: 100%;
         z-index: -1;
+        background: linear-gradient(transparent, rgb(13, 0, 49)), url("images/AirportMorning.JPG") no-repeat center center;
         background-size: cover;
         -webkit-background-size: cover;
         -moz-background-size: cover;
